# gnome-wallpaper-changer

./: .gitignore  CMakeLists.txt  README.md  install.sh  main.c
c++/: .gitignore  CMakeLists.txt  main.cpp
c++/headers/: Exception.hpp  SystemUser.hpp  WallpaperKeeper.hpp  definitions.hpp
c++/src/: Exception.cpp  SystemUser.cpp  WallpaperKeeper.cpp
